<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">The World Countries</string>
   	<string name="menu_settings">Settings</string>
    <string name="countries_overview_title_placeholder">Switzerland</string>
    
    <string name="capital">Capital:</string>
    <string name="capital_placeholder">Bern</string>
    
    <string name="nativeName">Origin name:</string>
    <string name="nativeName_placeholder">Schweiz</string>
    
    <string name="area">Area:</string>
    <string name="area_placeholder">41290 km</string>
    
    <string name="population">Population:</string>
    <string name="population_placeholder">7581000</string>
    
    <string name="continent">Region:</string>
    <string name="continent_placeholder">eu</string>
    
    <string name="currencies">Currency:</string>
    <string name="currencies_placeholder">CHF</string>
    
    <string name="callingCodes">Phone:</string>
    <string name="callingCodes_placeholder">+41</string>
    
    <string name="topLevelDomains">Internet:</string>
    <string name="topLevelDomains_placeholder">.ch</string>
    
    <string name="timezones">Timezone:</string>
    <string name="timezones_placeholder">AUT, FRA, ITA, LIE, DEU</string>
    
    <string name="giniIndex">GINI Index:</string>
    <string name="giniIndex_placeholder">33.7</string>
    
    <string name="languages">Language:</string>
    <string name="languages_placeholder">german</string>
    
    <string name="neighbours">Neighbour:</string>
    <string name="neighbours_placeholder">AUT, FRA, ITA, LIE, DEU</string>
    
    <string name="country_input">Insert a country</string>
    <string name="button_go">Show</string>
    <string name="button_go_neighbour">Show neighbour</string>
    <string name="ham_countries_api_uri">http://api.aerisapi.com/countries/%s?&amp;client_id=KdcEyosiD4ZS2KB5Ls8Kd&amp;client_secret=dWilzIYSdq5AfZ2bxHMTXxunpWW5LhGFClcGoKwv</string>
    <string name="country_data_still_loading">Country information still loading…</string>
    <string name="flag_description">Flag of the choosed country</string>
    <string name="api_description">Icon of REST Countries API</string>
	<string name="restcountries_all_countries">http://restcountries.eu/rest/v1/all</string>
	<string name="restcountries_alpha_code">http://restcountries.eu/rest/v1/alpha/%1$s</string>
	<string name="restCountriesApi_placeholder">Powered by <a href="http://restcountries.eu/">REST Countries</a> API</string>
	<string name="google_api_geocode">http://maps.googleapis.com/maps/api/geocode/json?latlng=%1$s,%2$s&amp;sensor=false</string>
 </resources>